AUTH 2.0 IS WORKING AND WE CAN PULL EVENTS!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,17 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Google Calendar API Android Quickstart"
+        android:label="Note Taker"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="Google Calendar API Android Quickstart" >
+            android:label="Note Taker" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -23,7 +22,7 @@
         </activity>
         <activity
             android:name=".NoteActivity"
-            android:label="Google Calendar API Android Quickstart" >
+            android:label="Create Note" >
         </activity>
 
     </application>
