--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
 
     defaultConfig {
-        applicationId "com.example.quickstart"
+        applicationId "com.brendan.notetakinghw2"
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
